--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-scripts": "3.4.3",
     "serve": "^11.3.2",
     "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "webpack": "4.42.0"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
